# rust-ui

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  serve  serve.rs
docs/: prd.md  tech-stack.md
src/: main.rs  server.rs
style/: main.css
