[package]
name = "rust_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }

# WASM dependencies
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "app"
path = "src/main.rs"
